--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,15 @@
-.App {
-  text-align: center;
+.appcheck{
+    background-color: white;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.Heading{
+    color: antiquewhite;
+    text-align: center;
+    font: 400 75px/0.8 'Great Vibes', Helvetica, sans-serif;
+    margin :20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Homepage{
+    text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ProfileScreen{
+    text-align: center;
 }
