--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,4 +1,44 @@
-.check{
-    color: antiquewhite;
-    
+/* Button */
+
+/* .myButton {
+	-moz-box-shadow: 0px 0px 0px 0px #91b8b3;
+	-webkit-box-shadow: 0px 0px 0px 0px #91b8b3;
+	box-shadow: 0px 0px 0px 0px #91b8b3;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #596662), color-stop(1, #6c7c7c));
+	background:-moz-linear-gradient(top, #596662 5%, #6c7c7c 100%);
+	background:-webkit-linear-gradient(top, #596662 5%, #6c7c7c 100%);
+	background:-o-linear-gradient(top, #596662 5%, #6c7c7c 100%);
+	background:-ms-linear-gradient(top, #596662 5%, #6c7c7c 100%);
+	background:linear-gradient(to bottom, #596662 5%, #6c7c7c 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#596662', endColorstr='#6c7c7c',GradientType=0);
+	background-color:#596662;
+	-moz-border-radius:42px;
+	-webkit-border-radius:42px;
+	border-radius:42px;
+	border:2px solid #566963;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:15px 28px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2b665e;
 }
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #596662));
+	background:-moz-linear-gradient(top, #6c7c7c 5%, #596662 100%);
+	background:-webkit-linear-gradient(top, #6c7c7c 5%, #596662 100%);
+	background:-o-linear-gradient(top, #6c7c7c 5%, #596662 100%);
+	background:-ms-linear-gradient(top, #6c7c7c 5%, #596662 100%);
+	background:linear-gradient(to bottom, #6c7c7c 5%, #596662 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#596662',GradientType=0);
+	background-color:#6c7c7c;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+} */
+
+/* Button */
