Some UI Changes For Meeting Point And Main Header

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     background-color: white;
 }
 .Heading{
-    color: antiquewhite;
+    color: yellow;
     text-align: center;
     font: 400 75px/0.8 'Great Vibes', Helvetica, sans-serif;
     margin :20px;
