--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -74,3 +74,93 @@
 	margin: 16px auto 16px auto !important;
 	left: 10px !important;
 }
+
+/* request Card */
+
+body {
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+.columns {
+	margin-top: 80px;
+}
+.card {
+	background-color: white;
+	box-shadow: rgba(10, 10, 10, 0.1) 0px 2px 3px, rgba(10, 10, 10, 0.1) 0px 0px 0px 1px;
+	color: #4a4a4a;
+	max-width: 100%;
+}
+.section {
+	background-color: #ededed;
+	min-height: 100vh;
+	position: relative;
+}
+.card {
+	border-radius: 6px;
+	overflow: hidden;
+	margin : 10px;
+}
+.header {
+	height: 120px;
+	background: #100c08;
+}
+.header .avatar {
+	width: 80px;
+	height: 100%;
+	position: relative;
+	margin: 0 auto;
+}
+.header .avatar img {
+	display: block;
+	border-radius: 50%;
+	position: absolute;
+	bottom: -42px;
+	border: 4px solid white;
+}
+.card-body {
+	padding: 30px;
+}
+.card-body .user-meta {
+	padding-top: 20px;
+}
+.card-body .user-meta .username {
+	font-size: 18px;
+	font-weight: 600;
+}
+.card-body .user-meta .position {
+	font-size: 90%;
+	color: #100c08;
+}
+.user-bio {
+	padding-top: 8px;
+	font-size: 92%;
+	color: #999;
+}
+.action {
+	padding-top: 20px;
+}
+.action .button {
+	padding: 16px 20px 16px 20px;
+	background: #2E8B57;
+	border-color: #2E8B57;
+	color: white;
+	border-radius: 100px;
+	transition: opacity 0.3s;
+}
+.action .button:hover {
+	opacity: 0.7;
+}
+
+.myBtn{
+	background-color: #980000 !important;
+	border-color: #980000 !important;
+	margin-left : 5px;
+	
+}
+
+.navBtn{
+	background-color: #7F00FF !important;
+	border-color: #7F00FF !important;
+	color: white !important ;
+}
